--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -28,221 +28,6 @@
 		<name>ApexClass</name>
 	</types>
 	<types>
-		<members>CPQ_Country_to_Region_Mapping.Afghanistan</members>
-		<members>CPQ_Country_to_Region_Mapping.Albania</members>
-		<members>CPQ_Country_to_Region_Mapping.Algeria</members>
-		<members>CPQ_Country_to_Region_Mapping.Andorra</members>
-		<members>CPQ_Country_to_Region_Mapping.Angola</members>
-		<members>CPQ_Country_to_Region_Mapping.Antarctica</members>
-		<members>CPQ_Country_to_Region_Mapping.Antigua_and_Barbuda</members>
-		<members>CPQ_Country_to_Region_Mapping.Argentina</members>
-		<members>CPQ_Country_to_Region_Mapping.Armenia</members>
-		<members>CPQ_Country_to_Region_Mapping.Aruba</members>
-		<members>CPQ_Country_to_Region_Mapping.Australia</members>
-		<members>CPQ_Country_to_Region_Mapping.Austria</members>
-		<members>CPQ_Country_to_Region_Mapping.Azerbaijan</members>
-		<members>CPQ_Country_to_Region_Mapping.Bahamas</members>
-		<members>CPQ_Country_to_Region_Mapping.Bahrain</members>
-		<members>CPQ_Country_to_Region_Mapping.Bangladesh</members>
-		<members>CPQ_Country_to_Region_Mapping.Barbados</members>
-		<members>CPQ_Country_to_Region_Mapping.Belarus</members>
-		<members>CPQ_Country_to_Region_Mapping.Belgium</members>
-		<members>CPQ_Country_to_Region_Mapping.Belize</members>
-		<members>CPQ_Country_to_Region_Mapping.Benin</members>
-		<members>CPQ_Country_to_Region_Mapping.Bhutan</members>
-		<members>CPQ_Country_to_Region_Mapping.Bolivia</members>
-		<members>CPQ_Country_to_Region_Mapping.Bosnia_and_Herzegovina</members>
-		<members>CPQ_Country_to_Region_Mapping.Botswana</members>
-		<members>CPQ_Country_to_Region_Mapping.Brazil</members>
-		<members>CPQ_Country_to_Region_Mapping.Brunei_Darussalam</members>
-		<members>CPQ_Country_to_Region_Mapping.Bulgaria</members>
-		<members>CPQ_Country_to_Region_Mapping.Burkina_Faso</members>
-		<members>CPQ_Country_to_Region_Mapping.Burma</members>
-		<members>CPQ_Country_to_Region_Mapping.Burundi</members>
-		<members>CPQ_Country_to_Region_Mapping.Cambodia</members>
-		<members>CPQ_Country_to_Region_Mapping.Cameroon</members>
-		<members>CPQ_Country_to_Region_Mapping.Canada</members>
-		<members>CPQ_Country_to_Region_Mapping.Cape_Verde</members>
-		<members>CPQ_Country_to_Region_Mapping.Cayman_Islands</members>
-		<members>CPQ_Country_to_Region_Mapping.Central_African_Republic</members>
-		<members>CPQ_Country_to_Region_Mapping.Chad</members>
-		<members>CPQ_Country_to_Region_Mapping.Chile</members>
-		<members>CPQ_Country_to_Region_Mapping.China</members>
-		<members>CPQ_Country_to_Region_Mapping.Colombia</members>
-		<members>CPQ_Country_to_Region_Mapping.Comoros</members>
-		<members>CPQ_Country_to_Region_Mapping.Congo</members>
-		<members>CPQ_Country_to_Region_Mapping.Cook_Islands</members>
-		<members>CPQ_Country_to_Region_Mapping.Costa_Rica</members>
-		<members>CPQ_Country_to_Region_Mapping.Cote_D_Ivoire_Ivory_Coast</members>
-		<members>CPQ_Country_to_Region_Mapping.Croatia_Hrvatska</members>
-		<members>CPQ_Country_to_Region_Mapping.Cuba</members>
-		<members>CPQ_Country_to_Region_Mapping.Cyprus</members>
-		<members>CPQ_Country_to_Region_Mapping.Czech_Republic</members>
-		<members>CPQ_Country_to_Region_Mapping.Denmark</members>
-		<members>CPQ_Country_to_Region_Mapping.Djibouti</members>
-		<members>CPQ_Country_to_Region_Mapping.Dominica</members>
-		<members>CPQ_Country_to_Region_Mapping.Dominican_Republic</members>
-		<members>CPQ_Country_to_Region_Mapping.East_Timor</members>
-		<members>CPQ_Country_to_Region_Mapping.Ecuador</members>
-		<members>CPQ_Country_to_Region_Mapping.Egypt</members>
-		<members>CPQ_Country_to_Region_Mapping.El_Salvador</members>
-		<members>CPQ_Country_to_Region_Mapping.Equatorial_Guinea</members>
-		<members>CPQ_Country_to_Region_Mapping.Eritrea</members>
-		<members>CPQ_Country_to_Region_Mapping.Estonia</members>
-		<members>CPQ_Country_to_Region_Mapping.Ethiopia</members>
-		<members>CPQ_Country_to_Region_Mapping.Fiji</members>
-		<members>CPQ_Country_to_Region_Mapping.Finland</members>
-		<members>CPQ_Country_to_Region_Mapping.France</members>
-		<members>CPQ_Country_to_Region_Mapping.French_Guiana</members>
-		<members>CPQ_Country_to_Region_Mapping.Gabon</members>
-		<members>CPQ_Country_to_Region_Mapping.Gambia</members>
-		<members>CPQ_Country_to_Region_Mapping.Georgia</members>
-		<members>CPQ_Country_to_Region_Mapping.Germany</members>
-		<members>CPQ_Country_to_Region_Mapping.Ghana</members>
-		<members>CPQ_Country_to_Region_Mapping.Greece</members>
-		<members>CPQ_Country_to_Region_Mapping.Greenland</members>
-		<members>CPQ_Country_to_Region_Mapping.Grenada</members>
-		<members>CPQ_Country_to_Region_Mapping.Guatemala</members>
-		<members>CPQ_Country_to_Region_Mapping.Guinea</members>
-		<members>CPQ_Country_to_Region_Mapping.Guinea_Bissau</members>
-		<members>CPQ_Country_to_Region_Mapping.Guyana</members>
-		<members>CPQ_Country_to_Region_Mapping.Haiti</members>
-		<members>CPQ_Country_to_Region_Mapping.Heard_and_McDonald_Islands</members>
-		<members>CPQ_Country_to_Region_Mapping.Honduras</members>
-		<members>CPQ_Country_to_Region_Mapping.Hong_Kong</members>
-		<members>CPQ_Country_to_Region_Mapping.Hungary</members>
-		<members>CPQ_Country_to_Region_Mapping.Iceland</members>
-		<members>CPQ_Country_to_Region_Mapping.India</members>
-		<members>CPQ_Country_to_Region_Mapping.Indonesia</members>
-		<members>CPQ_Country_to_Region_Mapping.Iran</members>
-		<members>CPQ_Country_to_Region_Mapping.Iraq</members>
-		<members>CPQ_Country_to_Region_Mapping.Ireland</members>
-		<members>CPQ_Country_to_Region_Mapping.Isle_of_Man</members>
-		<members>CPQ_Country_to_Region_Mapping.Israel</members>
-		<members>CPQ_Country_to_Region_Mapping.Italy</members>
-		<members>CPQ_Country_to_Region_Mapping.Jamaica</members>
-		<members>CPQ_Country_to_Region_Mapping.Japan</members>
-		<members>CPQ_Country_to_Region_Mapping.Jordan</members>
-		<members>CPQ_Country_to_Region_Mapping.Kazakhstan</members>
-		<members>CPQ_Country_to_Region_Mapping.Kenya</members>
-		<members>CPQ_Country_to_Region_Mapping.Kiribati</members>
-		<members>CPQ_Country_to_Region_Mapping.Korea_North</members>
-		<members>CPQ_Country_to_Region_Mapping.Korea_South</members>
-		<members>CPQ_Country_to_Region_Mapping.Kuwait</members>
-		<members>CPQ_Country_to_Region_Mapping.Kyrgyzstan</members>
-		<members>CPQ_Country_to_Region_Mapping.Laos</members>
-		<members>CPQ_Country_to_Region_Mapping.Latvia</members>
-		<members>CPQ_Country_to_Region_Mapping.Lebanon</members>
-		<members>CPQ_Country_to_Region_Mapping.Lesotho</members>
-		<members>CPQ_Country_to_Region_Mapping.Liberia</members>
-		<members>CPQ_Country_to_Region_Mapping.Libya</members>
-		<members>CPQ_Country_to_Region_Mapping.Liechtenstein</members>
-		<members>CPQ_Country_to_Region_Mapping.Lithuania</members>
-		<members>CPQ_Country_to_Region_Mapping.Luxembourg</members>
-		<members>CPQ_Country_to_Region_Mapping.Macao</members>
-		<members>CPQ_Country_to_Region_Mapping.Macedonia</members>
-		<members>CPQ_Country_to_Region_Mapping.Madagascar</members>
-		<members>CPQ_Country_to_Region_Mapping.Malawi</members>
-		<members>CPQ_Country_to_Region_Mapping.Malaysia</members>
-		<members>CPQ_Country_to_Region_Mapping.Maldives</members>
-		<members>CPQ_Country_to_Region_Mapping.Mali</members>
-		<members>CPQ_Country_to_Region_Mapping.Malta</members>
-		<members>CPQ_Country_to_Region_Mapping.Man_Isle_of</members>
-		<members>CPQ_Country_to_Region_Mapping.Marshall_Islands</members>
-		<members>CPQ_Country_to_Region_Mapping.Mauritania</members>
-		<members>CPQ_Country_to_Region_Mapping.Mauritius</members>
-		<members>CPQ_Country_to_Region_Mapping.Mexico</members>
-		<members>CPQ_Country_to_Region_Mapping.Moldova</members>
-		<members>CPQ_Country_to_Region_Mapping.Monaco</members>
-		<members>CPQ_Country_to_Region_Mapping.Mongolia</members>
-		<members>CPQ_Country_to_Region_Mapping.Montenegro</members>
-		<members>CPQ_Country_to_Region_Mapping.Morocco</members>
-		<members>CPQ_Country_to_Region_Mapping.Mozambique</members>
-		<members>CPQ_Country_to_Region_Mapping.Namibia</members>
-		<members>CPQ_Country_to_Region_Mapping.Nauru</members>
-		<members>CPQ_Country_to_Region_Mapping.Nepal</members>
-		<members>CPQ_Country_to_Region_Mapping.Netherlands</members>
-		<members>CPQ_Country_to_Region_Mapping.Netherlands_Antilles</members>
-		<members>CPQ_Country_to_Region_Mapping.New_Caledonia</members>
-		<members>CPQ_Country_to_Region_Mapping.New_Zealand</members>
-		<members>CPQ_Country_to_Region_Mapping.Nicaragua</members>
-		<members>CPQ_Country_to_Region_Mapping.Niger</members>
-		<members>CPQ_Country_to_Region_Mapping.Nigeria</members>
-		<members>CPQ_Country_to_Region_Mapping.Norway</members>
-		<members>CPQ_Country_to_Region_Mapping.Oman</members>
-		<members>CPQ_Country_to_Region_Mapping.Pakistan</members>
-		<members>CPQ_Country_to_Region_Mapping.Palau</members>
-		<members>CPQ_Country_to_Region_Mapping.Palestinian_Territory_Occupied</members>
-		<members>CPQ_Country_to_Region_Mapping.Panama</members>
-		<members>CPQ_Country_to_Region_Mapping.Papua_New_Guinea</members>
-		<members>CPQ_Country_to_Region_Mapping.Paraguay</members>
-		<members>CPQ_Country_to_Region_Mapping.Peru</members>
-		<members>CPQ_Country_to_Region_Mapping.Philippines</members>
-		<members>CPQ_Country_to_Region_Mapping.Poland</members>
-		<members>CPQ_Country_to_Region_Mapping.Portugal</members>
-		<members>CPQ_Country_to_Region_Mapping.Qatar</members>
-		<members>CPQ_Country_to_Region_Mapping.Romania</members>
-		<members>CPQ_Country_to_Region_Mapping.Russia</members>
-		<members>CPQ_Country_to_Region_Mapping.Rwanda</members>
-		<members>CPQ_Country_to_Region_Mapping.Saint_Kitts_and_Nevis</members>
-		<members>CPQ_Country_to_Region_Mapping.Saint_Lucia</members>
-		<members>CPQ_Country_to_Region_Mapping.Saint_Martin_French_part</members>
-		<members>CPQ_Country_to_Region_Mapping.Samoa</members>
-		<members>CPQ_Country_to_Region_Mapping.San_Marino</members>
-		<members>CPQ_Country_to_Region_Mapping.Sao_Tome_and_Principe</members>
-		<members>CPQ_Country_to_Region_Mapping.Saudi_Arabia</members>
-		<members>CPQ_Country_to_Region_Mapping.Senegal</members>
-		<members>CPQ_Country_to_Region_Mapping.Serbia</members>
-		<members>CPQ_Country_to_Region_Mapping.Seychelles</members>
-		<members>CPQ_Country_to_Region_Mapping.Sierra_Leone</members>
-		<members>CPQ_Country_to_Region_Mapping.Singapore</members>
-		<members>CPQ_Country_to_Region_Mapping.Slovakia</members>
-		<members>CPQ_Country_to_Region_Mapping.Slovenia</members>
-		<members>CPQ_Country_to_Region_Mapping.Solomon_Islands</members>
-		<members>CPQ_Country_to_Region_Mapping.Somalia</members>
-		<members>CPQ_Country_to_Region_Mapping.South_Africa</members>
-		<members>CPQ_Country_to_Region_Mapping.Spain</members>
-		<members>CPQ_Country_to_Region_Mapping.Sri_Lanka</members>
-		<members>CPQ_Country_to_Region_Mapping.Sudan</members>
-		<members>CPQ_Country_to_Region_Mapping.Suriname</members>
-		<members>CPQ_Country_to_Region_Mapping.Swaziland</members>
-		<members>CPQ_Country_to_Region_Mapping.Sweden</members>
-		<members>CPQ_Country_to_Region_Mapping.Switzerland</members>
-		<members>CPQ_Country_to_Region_Mapping.Syria</members>
-		<members>CPQ_Country_to_Region_Mapping.Taiwan</members>
-		<members>CPQ_Country_to_Region_Mapping.Tajikistan</members>
-		<members>CPQ_Country_to_Region_Mapping.Tanzania</members>
-		<members>CPQ_Country_to_Region_Mapping.Thailand</members>
-		<members>CPQ_Country_to_Region_Mapping.Timor_Leste</members>
-		<members>CPQ_Country_to_Region_Mapping.Togo</members>
-		<members>CPQ_Country_to_Region_Mapping.Tokelau</members>
-		<members>CPQ_Country_to_Region_Mapping.Tonga</members>
-		<members>CPQ_Country_to_Region_Mapping.Trinidad_and_Tobago</members>
-		<members>CPQ_Country_to_Region_Mapping.Tunisia</members>
-		<members>CPQ_Country_to_Region_Mapping.Turkey</members>
-		<members>CPQ_Country_to_Region_Mapping.Turkmenistan</members>
-		<members>CPQ_Country_to_Region_Mapping.Tuvalu</members>
-		<members>CPQ_Country_to_Region_Mapping.USA</members>
-		<members>CPQ_Country_to_Region_Mapping.Uganda</members>
-		<members>CPQ_Country_to_Region_Mapping.Ukraine</members>
-		<members>CPQ_Country_to_Region_Mapping.United_Arab_Emirates</members>
-		<members>CPQ_Country_to_Region_Mapping.United_Kingdom</members>
-		<members>CPQ_Country_to_Region_Mapping.United_States</members>
-		<members>CPQ_Country_to_Region_Mapping.Uruguay</members>
-		<members>CPQ_Country_to_Region_Mapping.Uzbekistan</members>
-		<members>CPQ_Country_to_Region_Mapping.Vanuatu</members>
-		<members>CPQ_Country_to_Region_Mapping.Vatican_City_State_Holy_See</members>
-		<members>CPQ_Country_to_Region_Mapping.Venezuela</members>
-		<members>CPQ_Country_to_Region_Mapping.Vietnam</members>
-		<members>CPQ_Country_to_Region_Mapping.Yemen</members>
-		<members>CPQ_Country_to_Region_Mapping.Yugoslavia</members>
-		<members>CPQ_Country_to_Region_Mapping.Zaire</members>
-		<members>CPQ_Country_to_Region_Mapping.Zambia</members>
-		<members>CPQ_Country_to_Region_Mapping.Zimbabwe</members>
-		<name>CustomMetadata</name>
-	</types>
-	<types>
-		<members>CPQ_Country_to_Region_Mapping__mdt</members>
 		<members>Deposit__c</members>
 		<members>Payload__c</members>
 		<members>blng__Payment__c</members>
@@ -253,6 +38,11 @@
 	<types>
 		<members>Create_Quote</members>
 		<name>Flow</name>
+	</types>
+	<types>
+		<members>Refund_Reasons</members>
+		<members>Refund_Statuses</members>
+		<name>GlobalValueSet</name>
 	</types>
 	<version>48.0</version>
 </Package>
